// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIndicator snapshot alternate 1`] = `
<span
  class="css-o6cbs8"
/>
`;

exports[`LoadingIndicator snapshot default component wrapping 1`] = `
<div
  class="component"
>
  <span
    class="css-o6cbs8"
  />
</div>
`;

exports[`LoadingIndicator snapshot primary 1`] = `
<span
  class="css-1xdhyk6"
>
  <span
    class="css-fl1se0"
  />
  <span
    class="css-1qccjm5"
  />
  <span
    class="css-do256"
  />
  <span
    class="css-1vt3jh2"
  />
  <span
    class="css-dx1ugf"
  />
</span>
`;
